Kubernetes-files/result-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-app
  namespace: three-tier
spec:
  selector:
    app: result-app
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
  type: NodePort
